# rust-apalis-test

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DATABASE_SETUP.md  MANUAL_UI_BUILD.md  QUICKSTART_UI.md  README.md  REFACTORING.md  SETUP_UI.md  setup-ui.sh
bins/board/: main.rs
bins/combined/: main.rs
bins/producer/: main.rs
bins/rest/: main.rs
bins/setup_migration/: main.rs
bins/worker/: main.rs
docs/: APALIS_BOARD.md  setup-postgres.md  setup-postgres.sql
src/: container.rs  lib.rs
src/domain/: enums.rs  jobs.rs  mod.rs
src/handler/: mod.rs
src/handler/rest/: mod.rs  order.rs
src/handler/workflow/: email.rs  order.rs
src/server/: mod.rs  monitor.rs  worker_config.rs
src/server/rest/: mod.rs  router.rs
src/server/worker/: register.rs
src/server/workers/: email.rs  order.rs
src/storage/: amqp.rs  mod.rs  postgres.rs  redis.rs
src/usecase/: email.rs  mod.rs  order.rs
src/workflow/: handler.rs  mod.rs
src/workflow/handler/: email.rs  mod.rs  order.rs
src/workflow/handlers/: email.rs  mod.rs  order.rs
src/workflow/usecase/: email.rs  mod.rs  order.rs
static/: apalis-board-web-ede112675739ea07.js  index.html  input-1e127c9e25a59db8.css
