[package]
name = "rust-apalis-test"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_apalis_test"
path = "src/lib.rs"

[[bin]]
name = "rest"
path = "bins/rest/main.rs"

[[bin]]
name = "worker"
path = "bins/worker/main.rs"

[[bin]]
name = "setup_migration"
path = "bins/setup_migration/main.rs"

[[bin]]
name = "board"
path = "bins/board/main.rs"

[dependencies]
apalis = { version = "1.0.0-rc.4", features = ["retry"] }
apalis-postgres = { version = "1.0.0-rc.3" }
apalis-core = { version = "1.0.0-rc.4" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "fs"] }
async-trait = "0.1"
axum = "0.8"
tracing-subscriber = "0.3"
apalis-board = { version = "1.0.0-rc.3", features = ["axum"] }
apalis-board-api = { version = "1.0.0-rc.3", features = ["axum"] }
