[package]
name = "rust-apalis-test"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_apalis_test"
path = "src/lib.rs"

[[bin]]
name = "rest"
path = "bins/rest/main.rs"

[[bin]]
name = "worker"
path = "bins/worker/main.rs"

[dependencies]
apalis = { version = "1.0.0-rc.4", features = ["retry"] }
apalis-amqp = "1.0.0-rc.3"
apalis-codec = "0.1.0-rc.4"
apalis-core = { version = "1.0.0-rc.4" }
apalis-workflow = { version = "0.1.0-rc.4" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tower = { version = "0.5" }
async-trait = "0.1"
axum = "0.8"
lapin = "3.7"
deadpool-lapin = "0.13"
